--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -87,3 +87,103 @@ body.sb-l-o #topbar.affix,
 	right: 300px;
 	margin-left: 0 !important;
 }
+
+.domain-list {
+	list-style: none;
+	padding-left: 0;
+}
+
+
+.domain-title {
+	display: block;
+    height: auto;
+    margin: 5px 0;
+    padding: 7px 10px;
+    color: #777;
+    text-decoration: none;
+    font-weight: 600;
+    border: 1px solid #ddd;
+    background: #f5f5f5;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    font-size: 13px;
+    line-height: 20px;
+
+    color: #FFF;
+    background-color: #4a89dc !important;
+    border-color: #4a89dc !important;
+}
+
+.domain-title a,
+.campaign-title a {
+	color: #fff;
+	font-size: 10px;
+	margin-right: 10px;
+}
+
+.campaign-list,
+.lander-list {
+	padding-top: 5px;
+	padding-left: 30px;
+	padding-bottom: 15px !important;
+    position: relative;
+    list-style: none;
+}
+
+.campaign-item {
+	display: block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    min-height: 20px;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.campaign-title {
+	color: #FFF;
+    background-color: #3bafda !important;
+    border-color: #3bafda !important;
+    display: block;
+    height: auto;
+    margin: 5px 0;
+    padding: 7px 10px;
+    
+    text-decoration: none;
+    font-weight: 600;
+    border: 1px solid #ddd;
+    background: #f5f5f5;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+}
+
+.lander-item {
+	display: block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    min-height: 20px;
+    font-size: 13px;
+    line-height: 20px;    
+}
+
+.lander-title {
+	color: #777;
+    border: 1px solid #ddd;
+    background: #f5f5f5;
+
+    display: block;
+    height: auto;
+    margin: 5px 0;
+    padding: 7px 10px;
+    text-decoration: none;
+    font-weight: 600;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+}
+
+/*.collapsing {
+    -webkit-transition: none;
+    transition: none;
+}*/
