--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -101,12 +101,16 @@ body.sb-l-o #topbar.affix,
     margin-top: 10px;
 }
 
+.domain-item a:hover,
+.domain-item a:focus {
+   text-decoration: none;
+}
 
 .domain-title {
 	display: block;
     height: auto;
     margin: 5px 0;
-    padding: 7px 10px;
+    padding: 7px 0 7px 10px;
     color: #777;
     text-decoration: none;
     font-weight: 600;
@@ -121,8 +125,8 @@ body.sb-l-o #topbar.affix,
     border-color: #4a89dc !important;
 }
 
-.domain-title a,
-.campaign-title a {
+.domain-title > .collapse-icon,
+.campaign-title > .collapse-icon {
 	color: #fff;
 	font-size: 10px;
 	margin-right: 10px;
@@ -154,7 +158,7 @@ body.sb-l-o #topbar.affix,
     display: block;
     height: auto;
     margin: 5px 0;
-    padding: 7px 10px;
+    padding: 7px 0px 7px 10px;
     
     text-decoration: none;
     font-weight: 600;
@@ -195,6 +199,43 @@ body.sb-l-o #topbar.affix,
 }
 
 
+.domain-controls {
+    float: right;
+    position: relative;
+    display: block;
+    width: 90px;
+    cursor: pointer;
+    margin-top: -7px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    background: rgba(0, 0, 0, 0.098);
+    border-left: 1px solid rgba(0, 0, 0, 0.06);
+}
+
 .domain-notification-label {
-    line-height: inherit;
+    margin-top: 5px;
+    width: 100%;
+}
+
+
+.campaign-controls {
+    float: right;
+    position: relative;
+    display: block;
+    width: 35px;
+    cursor: pointer;
+    margin-top: -7px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 13px;
+    background: rgba(0, 0, 0, 0.098);
+    border-left: 1px solid rgba(0, 0, 0, 0.06);
+}
+
+.campaign-notification-label {
+    margin-top: 10px;
+    position: relative;
+    right: 2px;
+    top: 1px;
 }
