--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -113,6 +113,7 @@ body.sb-l-o #topbar.affix,
     padding: 7px 0 7px 10px;
     color: #777;
     text-decoration: none;
+    cursor: pointer;
     font-weight: 600;
     border: 1px solid #ddd;
     background: #f5f5f5;
@@ -125,8 +126,8 @@ body.sb-l-o #topbar.affix,
     border-color: #4a89dc !important;
 }
 
-.domain-title > .collapse-icon,
-.campaign-title > .collapse-icon {
+.domain-title a,
+.campaign-title a {
 	color: #fff;
 	font-size: 10px;
 	margin-right: 10px;
@@ -195,7 +196,7 @@ body.sb-l-o #topbar.affix,
 }
 
 #sidebar_left {
-    background-color: #333;
+    background-color: #232323;
 }
 
 
@@ -203,8 +204,7 @@ body.sb-l-o #topbar.affix,
     float: right;
     position: relative;
     display: block;
-    width: 90px;
-    cursor: pointer;
+    width: 100px;
     margin-top: -7px;
     padding-left: 5px;
     padding-right: 5px;
@@ -224,11 +224,10 @@ body.sb-l-o #topbar.affix,
     position: relative;
     display: block;
     width: 35px;
-    cursor: pointer;
     margin-top: -7px;
     padding-left: 5px;
     padding-right: 5px;
-    padding-bottom: 13px;
+    padding-bottom: 5px;
     background: rgba(0, 0, 0, 0.098);
     border-left: 1px solid rgba(0, 0, 0, 0.06);
 }
@@ -238,4 +237,29 @@ body.sb-l-o #topbar.affix,
     position: relative;
     right: 2px;
     top: 1px;
+}
+
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 1.5s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
+
+/*.collapsing {
+    -webkit-transition: none;
+    transition: none;
+}*/
+
+.collapse-icon {
+    font-size: 10px;
+    margin-right: 10px;
 }
