--- a/public/assets/skin/overrides/login_overrides.css
+++ b/public/assets/skin/overrides/login_overrides.css
@@ -5,3 +5,7 @@
 body.external-page #main {
 	background: url("../../img/login/buildcave_bg.png") no-repeat bottom 30px right 30px #232323 !important;
 }
+
+#root-region, #login-container {
+	height: inherit;
+}
