added left nav collapse to header

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -270,6 +270,6 @@ body.sb-l-o #topbar.affix,
     width: 170px !important;
 }
 
-.mt7 {
-    margin-top: 7px !important;
+.mtn16 {
+    margin-top: -15px !important;
 }
