update to landers_page, completed right sidebar GUI

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -284,3 +284,10 @@ body.sb-l-o #topbar.affix,
 .mt3 {
     margin-top: 3px !important;
 }
+
+.pt0 {
+    padding-top: 0px !important;
+}
+.pb0 {
+    padding-bottom: 0px !important;
+}
