--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -106,3 +106,12 @@ span.fancytree-icon {
 }
     
 
+.sidebar-right-content .panel-body {
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+.btn.delete-lander {
+    margin: 0 auto;
+    display: block;
+}
