created landers list view composite view. fixed left nav highlight current page, added right sidebar logic

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -24,6 +24,10 @@
     border-left: 1px solid rgba(0, 0, 0, 0.06);
 }
 
+.landers-list-items .panel-group {
+    margin-bottom: -1px;
+}
+
 .landers-list-items .panel-tabs li a {
     width: 105px;
     border-left: none;
@@ -214,3 +218,4 @@ span.fancytree-node.fancytree-active, span.fancytree-node.fancytree-selected {
 #demo-canvas.login {
     opacity: .5 !important;
 }
+
