--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -46,6 +46,8 @@
     border-left: 1px solid rgba(0, 0, 0, 0.06);
 }
 
+
+
 .landers-list-items .accordion-toggle.active {
     color: #222 !important;
 }
@@ -225,4 +227,45 @@ span.fancytree-node.fancytree-active, span.fancytree-node.fancytree-selected {
 
 input.lander-search {
     padding: 15px !important;
+}
+
+.footer {
+    margin-top: 25px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    border-top: 1px solid #e2e2e2;
+    background-color: #fafafa;
+    margin-left: 0;
+    text-align: center;
+}
+
+.footer > .container {
+    display: inline-block;
+    padding-top: 15px;
+    float: none;
+}
+
+.pagination a.current-page {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.footer > .container > .footer-content {
+    margin-top: 0;
+    padding-right: 85px; 
+}
+
+.landers-region: {
+    height: 100%;
+}
+
+.w95{
+    width: 95px !important;
+}
+
+#pages-list a {
+    padding-left: 2px;
+    padding-right: 2px
 }
