--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -228,18 +228,18 @@ input.lander-search {
 }
 
 .footer {
-    margin-top: 25px;
+    /*margin-top: 25px;*/
     /*position: absolute;
     bottom: 0;*/
     width: 100%;
     height: 100px;
     border-top: 1px solid #e2e2e2;
-    background-color: #fafafa;
+    /*background-color: #fafafa;*/
     margin-left: 0;
     text-align: center;
 }
 
-.footer > .container {
+.footer > .footer-container {
     display: inline-block;
     padding-top: 15px;
     float: none;
@@ -250,7 +250,7 @@ input.lander-search {
     text-decoration: underline;
 }
 
-.footer > .container > .footer-content {
+.footer > .footer-container > .footer-content {
     margin-top: 0;
     /*padding-right: 85px; */
 }
@@ -266,4 +266,9 @@ input.lander-search {
 #pages-list a {
     padding-left: 2px;
     padding-right: 2px
+}
+
+
+.landers-list-content {
+    padding: 25px 20px 35px 21px !important;
 }
