--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -40,7 +40,8 @@ body.sb-l-o #topbar.affix,
 #content_wrapper,
 #topbar.affix
  {
-	margin-left: 230px;
+    /*margin-left: 230px;*/
+	margin-left: 0px;
 }
 
 .sb-l-c #content_wrapper {
@@ -301,4 +302,21 @@ body.sb-l-o #topbar.affix,
 
 .modal-header {
     background-color: #fafafa;
+}
+
+.lds-top-nav ul li a {
+    line-height: 29px;
+    /*background-color: #101010 !important;*/
+}
+.lds-top-nav ul li a {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    color: #e9e9e9 !important;
+}
+.lds-top-nav ul li a:hover {
+    opacity: 0.8;
+}
+
+.navbar-brand:hover {
+    opacity: 0.8;
 }
