fix for click multiple accordions too fast opens multiple lander views

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -343,3 +343,8 @@ tr.warning input[type=select] {
     margin-top: 15px;
     margin-left:30px;
 }
+
+.inactive-link {
+   pointer-events: none;
+   cursor: default;
+}
