deploy lander to new domain functionality initial

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -369,3 +369,8 @@ tr.warning input[type=select] {
 .campaign-status-tab-handle {
     width: 120px !important;
 }
+
+
+#domains-list-datatable > tbody > tr {
+    cursor: pointer;
+}
