file upload gui, server adds lander and job and responds

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -322,3 +322,13 @@ body.sb-l-o #topbar.affix,
 .navbar-brand:hover {
     opacity: 0.8;
 }
+
+.settings-topbar {
+    padding: 0px 21px;
+    background: #fafafa;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.kv-upload-progress .progress {
+    display: none;
+}
