rip & deploy lander initial

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -396,3 +396,7 @@ tr.warning input[type=select] {
 #domains-list-datatable > tbody > tr {
     cursor: pointer;
 }
+
+.text-align-right {
+    text-align: right !important;
+}
