--- a/public/assets/skin/overrides/active_snippets_overrides.css
+++ b/public/assets/skin/overrides/active_snippets_overrides.css
@@ -85,17 +85,49 @@
     float: left;
 }
 
-.snippets-list .select2-container--default .select2-selection--single {
-    border-radius: 0px;
+.add-snippet-to-page-container .select2-container--default .select2-selection--single {
     border: 1px solid #e8e8e8;
-    height: 31px;
     outline: none;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    max-width: 190px;
     left: 4px;
+    height: 31px !important;
+}
+
+.select-with-button {
+    float: left;
+}
+.select-with-button .select2-container--default .select2-selection--single {
+    /*border-radius: 0px;*/
+    border: 1px solid #e8e8e8;
+    height: 39px;
+    outline: none;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    width: 190px;
+    left: 4px;
+}
+
+/*
+    select2 corrections for right sidebar heights...
+*/
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    overflow: auto;
+}
+
+.select-with-button .select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 35px;
+}
+.select-with-button .select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 39px;
 }
 
 .snippets-list .select2-container {
     left: 4px;
 }
+
 
 .snippets-list .js-snippet-alert {
     z-index: 10;
@@ -129,3 +161,6 @@
     width: 100%
 }
 
+.name-and-optimizations-region .input-group-addon-default{
+    color: #BBB !important;
+}
