edit snippet click from sidebar opens edit snippet code

--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -119,7 +119,7 @@
     margin-right: 15px;
 }
 
-.snippets-container .fancytree-title a.edit-link {
+.snippets-container .fancytree-title a.edit-snippet {
     position: absolute;
     right: 0;
     margin-right: 35px;
