--- a/public/assets/skin/overrides/active_snippets_overrides.css
+++ b/public/assets/skin/overrides/active_snippets_overrides.css
@@ -167,9 +167,23 @@
     color: #BBB !important;
 }
 
-
-
 #jssnippets-tree ul {
     list-style-type: none;
     padding-left: 5px;
+}
+
+.active-snippets-list li:first-child {
+    padding-top: 5px !important;
+}
+
+.active-snippets-list li.span {
+    padding-top: 0px;
+}
+
+.url-endpoints-list > li:first-child {
+    padding-top: 10px !important;
+}
+
+.url-endpoints-list > li {
+    padding-top: 15px;
 }
