--- a/public/assets/skin/overrides/active_snippets_overrides.css
+++ b/public/assets/skin/overrides/active_snippets_overrides.css
@@ -131,7 +131,7 @@
     left: 4px;
 }
 
-.snippets-list .js-snippet-alert {
+.js-snippet-alert {
     z-index: 10;
     display: none;
     height: 40px;
