--- a/public/assets/skin/overrides/landers_overrides.css
+++ b/public/assets/skin/overrides/landers_overrides.css
@@ -408,3 +408,8 @@ tr.warning input[type=select] {
 .text-align-right {
     text-align: right !important;
 }
+
+
+.deployed-domains-region .alert {
+    border: none !important;
+}
