--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -336,3 +336,27 @@ body.sb-l-o #topbar.affix,
 #content_wrapper, .sb-l-o #content_wrapper {
     left: 0;
 }
+
+.alert-loading {
+    display: none;
+}
+
+.spinner-full-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    left: 0px;
+    top: 0;
+    z-index: 10;
+    text-align: center;
+}
+
+.spinner-large {
+    color: #e5e5e5;
+    font-size: 35px;
+    -webkit-animation: spin2 2s infinite linear;
+    display: inline-block;
+    position: absolute;
+    top: 40%;
+}
