domains list row update show plus sign no more weird button

--- a/public/assets/skin/overrides/overrides.css
+++ b/public/assets/skin/overrides/overrides.css
@@ -364,3 +364,8 @@ body.sb-l-o #topbar.affix,
     -webkit-animation: spin2 2s infinite linear;
     display: inline-block;
 }
+
+
+.add-link-plus {
+    display: inline;
+}
